--- a/mongodb.yaml
+++ b/mongodb.yaml
@@ -11,3 +11,9 @@
     ansible.builtin.dnf:
       name: mongodb-org
       state: present
+
+  - name: start service
+    ansible.builtin.service:
+      name: mongod
+      state: started
+      enabled: yes
