--- a/mongodb.yaml
+++ b/mongodb.yaml
@@ -17,3 +17,14 @@
       name: mongod
       state: started
       enabled: yes
+
+  - name: allow remot connection
+    ansible.builtin.replace:
+      path: /etc/mongod.conf
+      regexp: '127.0.0.1'
+      replace: '0.0.0.0'
+  
+  - name: restarted mongodb
+    ansible.builtin.service:
+      name: mongod
+      state: restarted
