--- a/catalogue.yaml
+++ b/catalogue.yaml
@@ -34,5 +34,16 @@
       src: /tmp/catalogue.zip
       dest: /app
       remote_src: yes
-      
 
+  - name: install dependencies
+    ansible.general.npm:
+    path: /app
+
+  - name: copy catalogue service to system directory
+    ansible.builtin.copy:
+      src: catalogue.service
+      dest: /etc/systemd/system
+
+  - name: deamon reload
+    ansible.builtin.systemd_service:
+      daemon_reload: true
