--- a/catalogue.yaml
+++ b/catalogue.yaml
@@ -47,3 +47,9 @@
   - name: deamon reload
     ansible.builtin.systemd_service:
       daemon_reload: true
+
+  - name: starting service module
+    ansible.builtin.service:
+      name: catalogue 
+      state: started
+      enabled: yes
