--- a/catalogue.yaml
+++ b/catalogue.yaml
@@ -36,7 +36,7 @@
       remote_src: yes
 
   - name: install dependencies
-    ansible.general.npm:
+    community.general.npm:
     path: /app
 
   - name: copy catalogue service to system directory
