--- a/frontend.yaml
+++ b/frontend.yaml
@@ -49,3 +49,8 @@
     ansible.builtin.copy:
       src: nginx.conf
       dest: /etc/nginx/nginx.conf  
+
+  - name: restarted nginx
+    ansible.builtin.service:
+      name: nginx
+      state: restarted
