--- a/shipping.yaml
+++ b/shipping.yaml
@@ -35,5 +35,35 @@
     args:
       chdir: /app
 
+  - name: rename jar file
+    ansible.builtin.command: mv target/shipping-1.0.jar shipping.jar
+    args:
+      chdir: /app
 
-  
+  - name: copying service
+    ansible.builtin.copy:
+      src: shipping.service
+      dest: /etc/systemd/system/shipping.service
+
+  - name: daemon_reload
+    ansible.builtin.systemd_service:
+      daemon_reload: true
+
+  - name: enable and start
+    ansible.builtin.service:
+      name: shipping
+      state: started
+      enabled: yes
+
+  - name: install mysql client
+    ansible:builtin.dnf:
+      name: mysql
+      state: present
+
+  - name: connect to mysql using app user
+    community.mysql.mysql_info:
+      login_user: shipping
+      login_password: RoboShop@1
+      login_host: mysql.dev1407.site
+      login_db: cities
+      
