--- a/shipping.yaml
+++ b/shipping.yaml
@@ -66,9 +66,31 @@
       state: started
       enabled: yes
 
-  - name: connect to mysql using app user
-    community.mysql.mysql_info:
-      login_user: shipping
-      login_password: RoboShop@1
-      login_host: mysql.dev1407.site
-      login_db: cities
+  # - name: connect to mysql using app user
+  #   community.mysql.mysql_info:
+  #     login_user: shipping
+  #     login_password: RoboShop@1
+  #     login_host: mysql.dev1407.site
+  #     login_db: cities
+
+  - name: import data
+  tags:
+  - import
+  community.mysql.mysql_db:
+    name: all
+    login_user: root
+    login_password: RoboShop@1
+    login_host: mysql.dev1407.site
+    state: import
+    target: "{{ item }}"
+  loop:
+  - /app/db/schema.sql
+  - /app/db/app-user.sql
+  - /app/db/master-data.sql
+
+- name: restart shipping
+  tags:
+  - import
+  ansible.builtin.service:
+    state: restarted
+    name: shipping
