--- a/shipping.yaml
+++ b/shipping.yaml
@@ -74,23 +74,23 @@
   #     login_db: cities
 
   - name: import data
-  tags:
-  - import
-  community.mysql.mysql_db:
-    name: all
-    login_user: root
-    login_password: RoboShop@1
-    login_host: mysql.dev1407.site
-    state: import
-    target: "{{ item }}"
-  loop:
-  - /app/db/schema.sql
-  - /app/db/app-user.sql
-  - /app/db/master-data.sql
+    tags:
+    - import
+    community.mysql.mysql_db:
+      name: all
+      login_user: root
+      login_password: RoboShop@1
+      login_host: mysql.daws84s.site
+      state: import
+      target: "{{ item }}"
+    loop:
+    - /app/db/schema.sql
+    - /app/db/app-user.sql
+    - /app/db/master-data.sql
 
-- name: restart shipping
-  tags:
-  - import
-  ansible.builtin.service:
-    state: restarted
-    name: shipping
+  - name: restart shipping
+    tags:
+    - import
+    ansible.builtin.service:
+      state: restarted
+      name: shipping
