--- a/rabbitmq.yaml
+++ b/rabbitmq.yaml
@@ -26,6 +26,6 @@
         - vhost: /
           configure_priv: .*
           read_priv: .*
-          write_prive: .*
+          write_priv: .*
       state: present
-      
+
