--- a/payment.yaml
+++ b/payment.yaml
@@ -44,7 +44,7 @@
 
   - name: copy payment server
     ansible.builtin.copy:
-      name: payment.service
+      src: payment.service
       dest: /etc/systemd/system/payment.service
 
   - name: daemon reload
